# rotm_shared_memory

./: .gitignore  CMakeLists.txt  FEEDBACK.md  INSTALL.md  RUN.md  network.py  run_gnb.sh
configs/: gnb_zmq.yaml
fuzzer/: .gitignore  CMakeLists.txt  corpus.h  fuzzer.cc  mutator_request_handler.h
include/shared_memory/: common_shm.h  mutator_shm.h
poc/: gnb  gnb.cc  network.py
src/: CMakeLists.txt  common_shm.cc  mutator_shm.cc
test/: CMakeLists.txt  test_mutator_shm_client.cc  test_mutator_shm_server.cc
